--- a/DemostracionesPRYE/main.tex
+++ b/DemostracionesPRYE/main.tex
@@ -51,6 +51,7 @@
 ]{Proof}
 
 \declaretheorem[style=definition]{Def}
+\declaretheorem[style=definition]{Teo}
 \declaretheorem[style=Proof, numbered=no]{Demo}
 % Portada %
 \newcommand*{\titleTMB}{\begingroup
@@ -83,5 +84,6 @@
 \tableofcontents
 \clearpage
 
-algo
+\include{Intro}
+\include{EstDesc}
 \end{document}
