avances hipergeometrica a binomial

--- a/AnalisisNE/ContDif.tex
+++ b/AnalisisNE/ContDif.tex
@@ -48,7 +48,7 @@ De igual forma, se puede definir $f'(x)$ como la parte estándar del
 cociente que define el límite:
 \[f'(x) = \sd{\frac{\st{f(x + h)} - f(x)}{h}}\]
 
-Como ejemplo, se motrará el uso de estas definiciones para demostrar que
+Como ejemplo, se mostrará el uso de estas definiciones para demostrar que
 la diferenciabilidad en un punto implica continuidad en ese punto.
 Sean $x\in\R$, $f$ una función derivable en $x$ y $h\in M_1-\{0\}$.
 \begin{longderivation}<.8>
