--- a/AnalisisNE/UltraPot.tex
+++ b/AnalisisNE/UltraPot.tex
@@ -53,7 +53,7 @@ que su versión usual, esto es:
 \end{demo}
 
 Antes de continuar, se aclarará algo de la notación. Sean $a\in\IRh$,
-$(b_1,\dots,b_m)$ una $m$-upla de elmentos de $\IRh$ y $V$ un predicado
+$(b_1,\dots,b_m)$ una $m$-upla de elementos de $\IRh$ y $V$ un predicado
 en $\Rh$ con $c_1,\dots,c_n$ constantes las cuales denotan elementos
 fijos de $\Rh$.
 \begin{itemize}
@@ -145,9 +145,9 @@ demostración se hará de una forma más general, para evitar el proceso
 cada que sea necesario validar una proposición en $\IRh$. Para esto se
 considerará el lenguaje formal de la lógica de primer orden y los
 elementos de $\Rh$. Considerando que relaciones
-básicas en $\Rh$ son `$=$' y `$\in$', ya se cuenta con simbolos de
+básicas en $\Rh$ son `$=$' y `$\in$', ya se cuenta con símbolos de
 relación correspondientes en $\IRh$. Por lo que se puede generar un
-lenguage formal con $\IRh$, cuyas proposiciones dependen de $\U$.
+lenguaje formal con $\IRh$, cuyas proposiciones dependen de $\U$.
 Primero se mostrarán propiedades de la incorporación de $\Rh$ en $\IRh$.
 
 \begin{lemma}\label{lema:stR}~
@@ -521,7 +521,7 @@ precisamente logran el objetivo de toda esta construcción.
       \wff{ I \in \U }
   \end{longderivation}
 
-  por contradicción, supongase que existe $b\in\Rh$ tal que $a=\st{b}$.
+  por contradicción, supóngase que existe $b\in\Rh$ tal que $a=\st{b}$.
   \begin{longderivation}
       \wff{ a=\st{b} }\\
     \equiv\\
