--- a/DemostracionesPRYE/Distribuciones.tex
+++ b/DemostracionesPRYE/Distribuciones.tex
@@ -4,3 +4,4 @@ En esta sección se repasarán las definiciones de algunas distribuciones
 de la probabilidad.
 
 \input{DistDiscretas.tex}
+\input{Aprox.tex}
