--- a/Libro-Apuntes-Algebra/Algebra.tex
+++ b/Libro-Apuntes-Algebra/Algebra.tex
@@ -1,8 +1,7 @@
-\documentclass[leqno, 12pt]{article}
+\documentclass[12pt]{article}
 
 \usepackage{logicDG}
 \usepackage{Analysis}
-\usepackage{TPRO}
 \usepackage[hidelinks]{hyperref}
 \usepackage{lmodern}
 \usepackage[T1]{fontenc}
