--- a/Libro-Apuntes-Algebra/EspaciosVect.tex
+++ b/Libro-Apuntes-Algebra/EspaciosVect.tex
@@ -89,7 +89,7 @@ Las transformaciones lineales son funciones de un espacio vectorial a otro.
 La única condición entre estos es que compartan el mismo campo.
 
 Sean $V,W$ conjuntos los cuales forman un espacio vectorial con el campo $C$. Sea
-$T: V \to W$. $T$ es llamada transformacion lineal cuando:
+$T: V \to W$. $T$ es llamada transformación lineal cuando:
 
 \begin{itemize}
   \item Conserva la adición
