--- a/DemostracionesPRYE/Aprox.tex
+++ b/DemostracionesPRYE/Aprox.tex
@@ -7,14 +7,15 @@ Esto lleva al siguiente teorema de aproximación.
 
 \begin{Teo}
   Sea $X$ una variable aleatoria con distribución hipergeométrica de
-  parámetros $N,K,n$ donde $n \geq 2$. Si para un $\epsilon>0$, se tiene que
+  parámetros $N,K,n$. Si para un $\epsilon>0$ , $n > 1$ , $x > 0$,
+  se tiene que
   \begin{align*}
-    \frac{n-x}{N-K} &< \epsilon\\
-    \frac{1}{K}   &< \epsilon\\
-    \frac{n-1}{N} &< \epsilon
+    \frac{x-1}{K}     &< \epsilon\\
+    \frac{n-x-1}{N-K} &< \epsilon\\
+    \frac{n-1}{N}     &< \epsilon
   \end{align*}
   entonces,
-  \[\left|P(X=x) - B\left(n,\frac{K}{N}\right)(x)\right| < (\epsilon + 1)^{2n-3} - 1\]
+  \[\left|P(X=x) - B\left(n,\frac{K}{N}\right)(x)\right| < (\epsilon + 1)^{2n} - 1\]
 \end{Teo}
 
 Antes de comenzar con la demostración de este teorema, se presenta el siguiente lema, el
@@ -90,6 +91,7 @@ cual será de utilidad para obtener el resultado presentado.
 
   Así, $f(r) = (\epsilon+1)^r\,g(r) = (\epsilon+1)^r - 1$.
 \end{Demo}
+Siguiendo ahora con el teorema\dots
 \begin{Demo}
   Inicialmente, se expresará la función de masa de $X$ en términos más prácticos para
   esta demostración:
@@ -99,7 +101,7 @@ cual será de utilidad para obtener el resultado presentado.
       & \frac{K!}{(K-x)!\,x!}\,\frac{(N-K)!}{(N-K-n+x)!\,(n-x)!}\,\frac{(N-n)!\,n!}{N!}\\
     =\\
       & \binom{n}{x}\dfrac{\prod_{i=1}^{K}i}{\prod_{i=1}^{K-x}i}
-      \dfrac{\prod_{j=1}^{N-K}j}{\prod_{j=1}^{N-K-n+x}j}
+      \dfrac{\prod_{j=1}^{N-K}j}{\prod_{j=1}^{N-K-n+x}\mspace{-20mu}j\mspace{20mu}}
       \dfrac{\prod_{s=1}^{N-n}s}{\prod_{s=1}^{N}s}\\
     =\\
       & \binom{n}{x}\smashoperator[r]{\prod_{i=K-x+1}^{K}}i\hspace{20pt}
@@ -120,7 +122,7 @@ cual será de utilidad para obtener el resultado presentado.
       \prod_{s=0}^{n-1}\left(1 + \frac{s}{N}\right)
   \end{longderivation}
 
-  En este proceso no se toma en cuenta el caso en el que $x=0$ o $x=n$. Estos se
+  En este proceso no se toma en cuenta el caso en el que $x=0$ o $x=n$. Estos casos se
   resolverán posterior a tratar con la última expresión.
 
   Tomando en cuenta este resultado,
@@ -144,12 +146,113 @@ cual será de utilidad para obtener el resultado presentado.
   En el los productorios se ven involucradas sucesiones las cuales convergen
   a $0$ y además, son sencillas de acotar. Entonces, como
   \begin{align*}
-    \left|1 - \frac{i}{K} - 1\right| &= \frac{i}{K} \leq \frac{x-1}{K}\\
-    \left|1 - \frac{j}{N-K} - 1\right| &= \frac{j}{N-K} \leq \frac{n-x-1}{N-K}\\
+    \left|1 - \frac{i}{K} - 1\right| &= \frac{i}{K} \leq \frac{x-1}{K}\\[10pt]
+    \left|1 - \frac{j}{N-K} - 1\right| &= \frac{j}{N-K} \leq \frac{n-x-1}{N-K}\\[10pt]
     \left|1 + \frac{s}{N} - 1\right| &= \frac{s}{N} \leq \frac{n-1}{N}
   \end{align*}
   solo hace falta hallar una cota para los miembros derechos de las desigualdades para
   acotar todos los términos de los productorios.
 
+  Sea $\epsilon>0$ tal que
+  \begin{align*}
+    \frac{x-1}{K}     &< \epsilon\\
+    \frac{n-x-1}{N-K} &< \epsilon\\
+    \frac{n-1}{N}     &< \epsilon
+  \end{align*}
+  Entonces, por el lema,
+  \begin{align*}
+    \left|\prod_{i=0}^{x-1}\left(1-\frac{i}{K}\right) - 1\right| 
+    &< (\epsilon + 1)^x - 1\\[10pt]
+    \left|\prod_{j=0}^{n-x-1}\left(1 - \frac{j}{N-K}\right) - 1\right|
+    &< (\epsilon + 1)^{n-x} - 1\\[10pt]
+    \left|\prod_{s=0}^{n-1}\left(1 + \frac{s}{N}\right) - 1\right|
+    &< (\epsilon + 1)^n - 1
+  \end{align*}
+
+  Denotando cada uno de estos productos como $P_1$, $P_2$ y $P_3$ respectivamente,
+
+  \begin{longderivation}
+      & |P_1\,P_2\,P_3 - 1|\\
+    =\\
+      & |(P_1 - 1)(P_2\,P_3 - 1) + P_1 - 1 + P_2\,P_3 - 1|\\
+    \leq\\
+      & |P_1 - 1||P_2\,P_3 - 1| + |P_1 - 1| + |P_2\,P_3 - 1|\\
+    =\\
+      & |P_2\,P_3 - 1|(|P_1 - 1| + 1) + |P_1 - 1|\\
+    =\\
+      & |(P_2 - 1)(P_3 - 1) + P_2 - 1 + P_3 - 1|
+      (|P_1 - 1| + 1) + |P_1 - 1|\\
+    \leq\\
+      &(|P_2 - 1||P_3 - 1| + |P_2 - 1| + |P_3 - 1|)(|P_1 - 1| + 1) + |P_1 - 1|\\
+    <\\
+      &[
+        ((\epsilon + 1)^{n-x} - 1)((\epsilon + 1)^n - 1) +
+        (\epsilon + 1)^{n-x} - 1 + (\epsilon + 1)^n - 1
+      ]((\epsilon + 1)^x - 1 + 1) + (\epsilon + 1)^x - 1\\
+    =\\
+      & [
+        (\epsilon + 1)^{2n-x} - (\epsilon + 1)^{n-x} - (\epsilon + 1)^n + 1
+        + (\epsilon + 1)^{n-x} - 1 + (\epsilon + 1)^n - 1
+      ](\epsilon + 1)^x + (\epsilon + 1)^x - 1\\
+    =\\
+      & [(\epsilon + 1)^{2n-x} - 1](\epsilon + 1)^x + (\epsilon + 1)^x - 1\\
+    =\\
+      & (\epsilon + 1)^{2n} - 1
+  \end{longderivation}
   
+  Recordando que todo lo anterior se hizo bajo la suposición de que $x > 0$ y
+  $ x \not= n$. Para $x = 0$
+  \begin{longderivation}
+      &\left|
+        \dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}}
+        - \binom{n}{x}\left(\frac{K}{N}\right)^x\left(\frac{N-K}{N}\right)^{n-x}
+      \right|\\
+    =\\
+      &\left|
+        \dfrac{\binom{N-K}{n}}{\binom{N}{n}}
+        - \left(\frac{N-K}{N}\right)^n
+      \right|\\
+    =\\
+      & B\left(n,\frac{K}{N}\right)(0)\left|
+        \prod_{j=0}^{n-1}\left(1 - \frac{j}{N-K}\right)
+        \prod_{s=0}^{n-1}\left(1 + \frac{s}{N}\right) - 1
+      \right|\\
+    \leq\\
+      & \left|\prod_{j=0}^{n-1}\left(1 - \frac{j}{N-K}\right) - 1\right|
+      \left|\prod_{s=0}^{n-1}\left(1 + \frac{s}{N}\right) - 1\right| + 
+      \left|\prod_{j=0}^{n-1}\left(1 - \frac{j}{N-K}\right) - 1\right| +
+      \left|\prod_{s=0}^{n-1}\left(1 + \frac{s}{N}\right) - 1\right|\\
+    <\\
+      & [(\epsilon + 1)^n - 1](\epsilon + 1)^n + (\epsilon + 1)^n - 1\\
+    =\\
+      & (\epsilon + 1)^{2n} - 1
+  \end{longderivation}
+  Para $x=n$
+  \begin{longderivation}
+      &\left|
+          \dfrac{\binom{K}{x}\binom{N-K}{n-x}}{\binom{N}{n}}
+          - \binom{n}{x}\left(\frac{K}{N}\right)^x\left(\frac{N-K}{N}\right)^{n-x}
+        \right|\\
+    =\\
+      &\left|
+        \dfrac{\binom{K}{n}}{\binom{N}{n}} - \left(\frac{K}{N}\right)^n
+      \right|\\
+    =\\
+      & B\left(n,\frac{K}{N}\right)(n)
+      \left|
+        \prod_{i=0}^{n-1}\left(1 - \frac{i}{K}\right)
+        \prod_{s=0}^{n-1}\left(1 + \frac{s}{N}\right) - 1
+      \right|\\
+    \leq\\
+        & \left|\prod_{i=0}^{n-1}\left(1 - \frac{i}{K}\right) - 1\right|
+        \left|\prod_{s=0}^{n-1}\left(1 + \frac{s}{N}\right) - 1\right| +
+        \left|\prod_{i=0}^{n-1}\left(1 - \frac{i}{K}\right) - 1\right| +
+        \left|\prod_{s=0}^{n-1}\left(1 + \frac{s}{N}\right) - 1\right|\\
+    <\\
+      & [(\epsilon + 1)^n - 1](\epsilon + 1)^n + (\epsilon + 1)^n - 1\\
+    =\\
+      & (\epsilon + 1)^{2n} - 1 
+  \end{longderivation}
+
+  Para $n=1$ o $n=0$, la diferencia presentada es nula.
 \end{Demo}
