--- a/DemostracionesPRYE/DistDiscretas.tex
+++ b/DemostracionesPRYE/DistDiscretas.tex
@@ -31,51 +31,51 @@ Entonces
   \begin{enumerate}
     \item~
     \begin{longderivation}<0.8>
-        \wff{E(X)}\\
+        & {E(X)}\\
       =\\
-        \wff{\sum_{x=0}^nx\binom{n}{x}p^x(1-p)^{n-x}}\\
+        & {\sum_{x=0}^nx\binom{n}{x}p^x(1-p)^{n-x}}\\
       =\\
-        \wff{np\sum_{x=1}^n\frac{(n-1)!}{(n-k)!\,(x-1)!}p^x(1-p)^{n-x}}\\
+        & {np\sum_{x=1}^n\frac{(n-1)!}{(n-k)!\,(x-1)!}p^x(1-p)^{n-x}}\\
       =\\
-        \wff{np\sum_{x=0}^{n-1}\binom{n-1}{x}p^x(1-p)^{n-1-x}}\\
+        & {np\sum_{x=0}^{n-1}\binom{n-1}{x}p^x(1-p)^{n-1-x}}\\
       =\\
-        \wff{np\,(p+1-p)^{n-1}}\\
+        & {np\,(p+1-p)^{n-1}}\\
       =\\
-        \wff{np}
+        & {np}
     \end{longderivation}
     \item~
     \begin{longderivation}<0.8>
-        \wff{\text{Var}(X)}\\
+        & {\text{Var}(X)}\\
       =\\
-        \wff{E(X^2) - E^2(X)}\\
+        & {E(X^2) - E^2(X)}\\
       =\\
-        \wff{\sum_{x=0}^nx^2\binom{n}{x}p^x(1-p)^{n-x} - (np)^2}\\
+        & {\sum_{x=0}^nx^2\binom{n}{x}p^x(1-p)^{n-x} - (np)^2}\\
       =\\
-        \wff{np\left[
+        & {np\left[
           \sum_{x=1}^nx\binom{n-1}{x-1}p^{x-1}(1-p)^{n-x} - np
         \right]}\\
       =\\
-        \wff{np\left[
+        & {np\left[
           \sum_{x=0}^{n-1}(x+1)\binom{n-1}{x}p^x(1-p)^{n-1-x} - np
         \right]}\\
       =\\
-        \wff{np\left[
+        & {np\left[
           \sum_{x=0}^{n-1}x\binom{n-1}{x}p^x(1-p)^{n-1-x}
           +\sum_{x=0}^{n-1}\binom{n-1}{x}p^x(1-p)^{n-1-x}
           -np
         \right]}\\
       =\\
-        \wff{np\left[
+        & {np\left[
           p(n-1)\sum_{x=1}^{n-1}\binom{n-2}{x-1}p^{x-1}(1-p)^{n-1-x}+1-np
         \right]}\\
       =\\
-        \wff{np\left[
+        & {np\left[
           p(n-1)\sum_{x=0}^{n-2}\binom{n-2}{x}p^x(1-p)^{n-2-x}+1-np
         \right]}\\
       =\\
-        \wff{np[p(n-1)+1-np]}\\
+        & {np[p(n-1)+1-np]}\\
       =\\
-        \wff{np(1-p)}
+        & {np(1-p)}
     \end{longderivation}
     Este argumento es válido siempre que $n\geq 2$. Si $n<2$, entonces $n=1$ y
     \begin{longderivation}<0.8>
