valor esperado chi cuadrada... No está en orden no se por que

--- a/DemostracionesPRYE/main.tex
+++ b/DemostracionesPRYE/main.tex
@@ -104,5 +104,6 @@
 \include{Intro}
 \include{Probabilidad}
 \include{Distribuciones}
+\include{DistContinuas}
 \include{propiedades_var_E}
 \end{document}
