--- a/DemostracionesPRYE/Distribuciones.tex
+++ b/DemostracionesPRYE/Distribuciones.tex
@@ -4,4 +4,5 @@ En esta sección se repasarán las definiciones de algunas distribuciones
 de la probabilidad.
 
 \input{DistDiscretas.tex}
+\input{DistContinuas.tex}
 \input{Aprox.tex}
