--- a/DemostracionesPRYE/DistContinuas.tex
+++ b/DemostracionesPRYE/DistContinuas.tex
@@ -7,44 +7,50 @@ Entonces $Var(X) = 2V$ y $E(x) = V$
 
 \begin{Demo}
     Primero se comprueba $E(X)$
-    \begin{derivation}
-        & E(X)\\
-        =\\
-        & \int_{0}^{\infty} xf(x)dx\\
-        =\\
-        & \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}-1+1}e^{\frac{-x}{2}}dx\\
-        = \\
-        & \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}*2\int_{0}^{\infty}2^{\frac{v}{2}}x^{\frac{v}{2}}e^{-u}du\\
-        =\\
-        & \frac{2}{\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}}e^{-u}du\\
-        =\\
-        & \frac{2}{\Gamma(\frac{v}{2})}\Gamma(\frac{v}{2}+1)\\
-        =\\
-        &\frac{2}{\Gamma(\frac{v}{2})}\frac{v}{2}\Gamma(\frac{v}{2})\\
-        =\\
-        & v 
-        \end{derivation}
+
+    \begin{center}
+        \begin{derivation}
+            & E(X)\\
+            =\\
+            & \int_{0}^{\infty} xf(x)dx\\
+            =\\
+            & \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}-1+1}e^{\frac{-x}{2}}dx\\
+            = \\
+            & \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}*2\int_{0}^{\infty}2^{\frac{v}{2}}x^{\frac{v}{2}}e^{-u}du\\
+            =\\
+            & \frac{2}{\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}}e^{-u}du\\
+            =\\
+            & \frac{2}{\Gamma(\frac{v}{2})}\Gamma(\frac{v}{2}+1)\\
+            =\\
+            &\frac{2}{\Gamma(\frac{v}{2})}\frac{v}{2}\Gamma(\frac{v}{2})\\
+            =\\
+            & v 
+            \end{derivation}
+    \end{center}
 
     Ahora, se demuestra que $Var(x) = 2n$
-    \begin{derivation}
-        & Var(x)\\
-        =\\
-        & E(X^2)-E^2(X)\\
-        =\\
-        &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{2}x^{\frac{v}{2}-1}e^{\frac{-x}{2}}dx -v^2\\
-        =\\
-        &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}+1}e^{-\frac{x}{2}}dx - v^2\\
-        =\\
-        &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}2\int_{0}^{\infty}2^{\frac{v}{2}+1}u^{\frac{v}{2}+1}e^{-u}du - v^2\\
-        =\\
-        & \frac{4}{\Gamma(\frac{v}{2})}\Gamma{\frac{v}{2}+2}-v^2\\
-        =\\
-        & \frac{4}{\Gamma(\frac{v}{2})}(\frac{v}{2}+1)(\frac{v}{2})\Gamma(\frac{v}{2})-v^2\\
-        =\\
-        & 4\frac{v^2}{4}+4\frac{v}{2}-v^2\\
-        =\\
-        & v^2 +2v - v^2\\
-        =\\
-        & 2v
-    \end{derivation}
+    
+    \begin{center}
+        \begin{derivation}
+            & Var(x)\\
+            =\\
+            & E(X^2)-E^2(X)\\
+            =\\
+            &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{2}x^{\frac{v}{2}-1}e^{\frac{-x}{2}}dx -v^2\\
+            =\\
+            &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}+1}e^{-\frac{x}{2}}dx - v^2\\
+            =\\
+            &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}2\int_{0}^{\infty}2^{\frac{v}{2}+1}u^{\frac{v}{2}+1}e^{-u}du - v^2\\
+            =\\
+            & \frac{4}{\Gamma(\frac{v}{2})}\Gamma{\frac{v}{2}+2}-v^2\\
+            =\\
+            & \frac{4}{\Gamma(\frac{v}{2})}(\frac{v}{2}+1)(\frac{v}{2})\Gamma(\frac{v}{2})-v^2\\
+            =\\
+            & 4\frac{v^2}{4}+4\frac{v}{2}-v^2\\
+            =\\
+            & v^2 +2v - v^2\\
+            =\\
+            & 2v
+        \end{derivation}
+    \end{center}
 \end{Demo}
