--- a/DemostracionesPRYE/DistContinuas.tex
+++ b/DemostracionesPRYE/DistContinuas.tex
@@ -1,45 +1,47 @@
 \section{Distribución chi-cuadrada}
 Sea X una variable aleatoria tal que $X~\chi^2(v)$, entonces su $fdd$
 \[
-    F(X) = \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})} * x^{\frac{v}{2}-1}e^{\frac{-x}{2}}
+    F(X) = \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}x^{\frac{v}{2}-1}e^{\frac{-x}{2}}
 \]
 Entonces $Var(X) = 2V$ y $E(x) = V$
 
 \begin{Demo}
     Primero se comprueba $E(X)$
+
     \begin{derivation}
         & E(X)\\
         =\\
         & \int_{0}^{\infty} xf(x)dx\\
         =\\
-        & \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}-1+1}e^{\frac{-x}{2}}dx\\
+        & \frac{1}{2^{\frac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{\frac{v}{2}-1+1}e^{\frac{-x}{2}}dx\\
         = \\
-        & \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}*2\int_{0}^{\infty}2^{\frac{v}{2}}x^{\frac{v}{2}}e^{-u}du\\
+        & \frac{1}{2^{\frac{v}{2}}\Gamma\left(\frac{v}{2}\right)}2\int_{0}^{\infty}2^{\frac{v}{2}}x^{\frac{v}{2}}e^{-u}du\\
         =\\
-        & \frac{2}{\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}}e^{-u}du\\
+        & \frac{2}{\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{\frac{v}{2}}e^{-u}du\\
         =\\
-        & \frac{2}{\Gamma(\frac{v}{2})}\Gamma(\frac{v}{2}+1)\\
+        & \frac{2}{\Gamma\left(\frac{v}{2}\right)}\Gamma\left(\frac{v}{2}+1\right)\\
         =\\
-        &\frac{2}{\Gamma(\frac{v}{2})}\frac{v}{2}\Gamma(\frac{v}{2})\\
+        &\frac{2}{\Gamma\left(\frac{v}{2}\right)}\frac{v}{2}\Gamma\left(\frac{v}{2}\right)\\
         =\\
         & v 
         \end{derivation}
 
     Ahora, se demuestra que $Var(x) = 2n$
+
     \begin{derivation}
         & Var(x)\\
         =\\
         & E(X^2)-E^2(X)\\
         =\\
-        &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{2}x^{\frac{v}{2}-1}e^{\frac{-x}{2}}dx -v^2\\
+        &\frac{1}{2^{\frac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{2}x^{\frac{v}{2}-1}e^{\frac{-x}{2}}dx -v^2\\
         =\\
-        &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}\int_{0}^{\infty}x^{\frac{v}{2}+1}e^{-\frac{x}{2}}dx - v^2\\
+        &\frac{1}{2^{\frac{v}{2}}\Gamma\left(\frac{v}{2}\right)}\int_{0}^{\infty}x^{\frac{v}{2}+1}e^{-\frac{x}{2}}dx - v^2\\
         =\\
-        &\frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})}2\int_{0}^{\infty}2^{\frac{v}{2}+1}u^{\frac{v}{2}+1}e^{-u}du - v^2\\
+        &\frac{1}{2^{\frac{v}{2}}\Gamma\left(\frac{v}{2}\right)}2\int_{0}^{\infty}2^{\frac{v}{2}+1}u^{\frac{v}{2}+1}e^{-u}du - v^2\\
         =\\
-        & \frac{4}{\Gamma(\frac{v}{2})}\Gamma{\frac{v}{2}+2}-v^2\\
+        & \frac{4}{\Gamma\left(\frac{v}{2}\right)}\Gamma\left(\frac{v}{2}+2\right)-v^2\\
         =\\
-        & \frac{4}{\Gamma(\frac{v}{2})}(\frac{v}{2}+1)(\frac{v}{2})\Gamma(\frac{v}{2})-v^2\\
+        & \frac{4}{\Gamma\left(\frac{v}{2}\right)}\left(\frac{v}{2}+1\right)\left(\frac{v}{2}\right)\Gamma\left(\frac{v}{2}\right)-v^2\\
         =\\
         & 4\frac{v^2}{4}+4\frac{v}{2}-v^2\\
         =\\
