--- a/DemostracionesPRYE/DistContinuas.tex
+++ b/DemostracionesPRYE/DistContinuas.tex
@@ -1,4 +1,5 @@
-\section{Distribución chi-cuadrada}
+\section{Distribuciones Continuas}
+\subsection{Chi-cuadrada}
 Sea X una variable aleatoria tal que $X~\chi^2(v)$, entonces su $fdd$
 \[
     F(X) = \frac{1}{2^{\frac{v}{2}}\Gamma(\frac{v}{2})} * x^{\frac{v}{2}-1}e^{\frac{-x}{2}}
